crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_partial_columns.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT *\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, mar))\n  ORDER BY empid;\""
---
Ok(
    [
        "+-------+-------------+-----+-----+-------+-------+",
        "| empid | dept        | feb | apr | month | sales |",
        "+-------+-------------+-----+-----+-------+-------+",
        "| 1     | electronics | 200 | 100 | jan   | 100   |",
        "| 1     | electronics | 200 | 100 | mar   | 300   |",
        "| 2     | clothes     | 300 | 200 | jan   | 100   |",
        "| 2     | clothes     | 300 | 200 | mar   | 150   |",
        "| 3     | cars        | 400 | 50  | jan   | 200   |",
        "| 3     | cars        | 400 | 50  | mar   | 100   |",
        "| 4     | appliances  |     | 50  | jan   | 100   |",
        "| 4     | appliances  |     | 50  | mar   | 100   |",
        "+-------+-------------+-----+-----+-------+-------+",
    ],
)
