crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_with_cte.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"WITH sales_data AS (\n  SELECT * FROM monthly_sales WHERE empid < 3\n)\nSELECT *\n  FROM sales_data\n    UNPIVOT (sales FOR month IN (jan, feb, mar, apr))\n  ORDER BY empid;\""
---
Ok(
    [
        "+-------+-------------+-------+-------+",
        "| empid | dept        | month | sales |",
        "+-------+-------------+-------+-------+",
        "| 1     | electronics | jan   | 100   |",
        "| 1     | electronics | feb   | 200   |",
        "| 1     | electronics | mar   | 300   |",
        "| 1     | electronics | apr   | 100   |",
        "| 2     | clothes     | jan   | 100   |",
        "| 2     | clothes     | feb   | 300   |",
        "| 2     | clothes     | mar   | 150   |",
        "| 2     | clothes     | apr   | 200   |",
        "+-------+-------------+-------+-------+",
    ],
)
