crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_with_filtering.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT *\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, feb, mar, apr))\n  WHERE sales > 100\n  ORDER BY empid;\""
---
Ok(
    [
        "+-------+-------------+-------+-------+",
        "| empid | dept        | month | sales |",
        "+-------+-------------+-------+-------+",
        "| 1     | electronics | feb   | 200   |",
        "| 1     | electronics | mar   | 300   |",
        "| 2     | clothes     | feb   | 300   |",
        "| 2     | clothes     | mar   | 150   |",
        "| 2     | clothes     | apr   | 200   |",
        "| 3     | cars        | jan   | 200   |",
        "| 3     | cars        | feb   | 400   |",
        "+-------+-------------+-------+-------+",
    ],
)
