crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_with_having.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT month, SUM(sales) as total_sales\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, feb, mar, apr))\n  GROUP BY month\n  HAVING SUM(sales) > 400\n  ORDER BY month;\""
---
Ok(
    [
        "+-------+-------------+",
        "| month | total_sales |",
        "+-------+-------------+",
        "| feb   | 900         |",
        "| jan   | 500         |",
        "| mar   | 650         |",
        "+-------+-------------+",
    ],
)
