crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_with_include_nulls.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT *\n  FROM monthly_sales\n    UNPIVOT INCLUDE NULLS (sales FOR month IN (jan, feb, mar, apr))\n  ORDER BY empid;\""
---
Ok(
    [
        "+-------+-------------+-------+-------+",
        "| empid | dept        | month | sales |",
        "+-------+-------------+-------+-------+",
        "| 1     | electronics | jan   | 100   |",
        "| 1     | electronics | feb   | 200   |",
        "| 1     | electronics | mar   | 300   |",
        "| 1     | electronics | apr   | 100   |",
        "| 2     | clothes     | jan   | 100   |",
        "| 2     | clothes     | feb   | 300   |",
        "| 2     | clothes     | mar   | 150   |",
        "| 2     | clothes     | apr   | 200   |",
        "| 3     | cars        | jan   | 200   |",
        "| 3     | cars        | feb   | 400   |",
        "| 3     | cars        | mar   | 100   |",
        "| 3     | cars        | apr   | 50    |",
        "| 4     | appliances  | jan   | 100   |",
        "| 4     | appliances  | feb   |       |",
        "| 4     | appliances  | mar   | 100   |",
        "| 4     | appliances  | apr   | 50    |",
        "+-------+-------------+-------+-------+",
    ],
)
