crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_with_join.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT e.empid, e.dept, u.month, u.sales\n  FROM monthly_sales e\n  JOIN (\n    SELECT empid, month, sales\n    FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, feb, mar, apr))\n  ) u ON e.empid = u.empid\n  WHERE u.sales > 200\n  ORDER BY e.empid, u.month;\""
---
Ok(
    [
        "+-------+-------------+-------+-------+",
        "| empid | dept        | month | sales |",
        "+-------+-------------+-------+-------+",
        "| 1     | electronics | mar   | 300   |",
        "| 2     | clothes     | feb   | 300   |",
        "| 3     | cars        | feb   | 400   |",
        "+-------+-------------+-------+-------+",
    ],
)
