crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_with_subquery.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT *\n  FROM (\n    SELECT empid, dept, jan, feb, mar\n    FROM monthly_sales\n    WHERE dept IN ('electronics', 'clothes')\n  )\n  UNPIVOT (sales FOR month IN (jan, feb, mar))\n  ORDER BY empid;\""
---
Ok(
    [
        "+-------+-------------+-------+-------+",
        "| empid | dept        | month | sales |",
        "+-------+-------------+-------+-------+",
        "| 1     | electronics | jan   | 100   |",
        "| 1     | electronics | feb   | 200   |",
        "| 1     | electronics | mar   | 300   |",
        "| 2     | clothes     | jan   | 100   |",
        "| 2     | clothes     | feb   | 300   |",
        "| 2     | clothes     | mar   | 150   |",
        "+-------+-------------+-------+-------+",
    ],
)
