crates/core-executor/src/tests/sql/commands/snapshots/query_unpivot_with_union.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT *\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, feb))\n  UNION ALL\nSELECT *\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (mar, apr))\n  ORDER BY empid, month;\""
---
Ok(
    [
        "+-------+-------------+-----+-----+-------+-------+",
        "| empid | dept        | mar | apr | month | sales |",
        "+-------+-------------+-----+-----+-------+-------+",
        "| 1     | electronics | 100 | 200 | apr   | 100   |",
        "| 1     | electronics | 300 | 100 | feb   | 200   |",
        "| 1     | electronics | 300 | 100 | jan   | 100   |",
        "| 1     | electronics | 100 | 200 | mar   | 300   |",
        "| 2     | clothes     | 100 | 300 | apr   | 200   |",
        "| 2     | clothes     | 150 | 200 | feb   | 300   |",
        "| 2     | clothes     | 150 | 200 | jan   | 100   |",
        "| 2     | clothes     | 100 | 300 | mar   | 150   |",
        "| 3     | cars        | 200 | 400 | apr   | 50    |",
        "| 3     | cars        | 100 | 50  | feb   | 400   |",
        "| 3     | cars        | 100 | 50  | jan   | 200   |",
        "| 3     | cars        | 200 | 400 | mar   | 100   |",
        "| 4     | appliances  | 100 |     | apr   | 50    |",
        "| 4     | appliances  | 100 | 50  | jan   | 100   |",
        "| 4     | appliances  | 100 |     | mar   | 100   |",
        "+-------+-------------+-----+-----+-------+-------+",
    ],
)
